@@ -17,6 +17,8 @@ version 2.0.0
 	  remain hidden when Gaim is started again (Scott Shedden)
 	* Contacts will auto-expand when dragging into the buddy list.
 	* SSL support for IRC connections (Daniel Atallah)
+	* Add a "Last Seen" field to tooltips for buddies in your buddy
+	  list (Richard Laager)
 
 	Bug fixes:
 	* Some memory leaks plugged (Miah Gregory, Felipe Contreras)
